Update mutiagent code to solve some issues.

--- a/Mutli-Agent/Multiagent_response.ipynb
+++ b/Mutli-Agent/Multiagent_response.ipynb
@@ -335,20 +335,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "id": "7ab4e6bb-1c8b-43d0-8024-87ed54843cb3",
    "metadata": {},
    "outputs": [],
    "source": [
     "def invoke_with_retries(llm, prompt, max_retries=5, backoff_factor=2):\n",
-    "    \"\"\"Helper function to invoke LLM with retry logic in case of timeout errors.\"\"\"\n",
+    "    \"\"\"\n",
+    "    Helper function to invoke LLM with retry logic in case of timeout or HTTP errors.\n",
+    "    \"\"\"\n",
     "    for attempt in range(max_retries):\n",
     "        try:\n",
-    "            return llm.invoke(prompt, timeout=6000)  # Attempt to invoke LLM\n",
+    "            return llm.invoke(prompt, timeout=300000)  # Attempt to invoke LLM\n",
     "        except TimeoutError:\n",
+    "            # Handle timeout errors with exponential backoff\n",
     "            sleep_time = backoff_factor * (2 ** attempt)\n",
-    "            time.sleep(sleep_time)  # Exponential backoff\n",
-    "            print(\"Trying Solver again\")\n",
+    "            time.sleep(sleep_time)\n",
+    "            print(f\"Timeout occurred. Retrying after {sleep_time} seconds... Attempt {attempt + 1}/{max_retries}\")\n",
+    "        except HTTPError as e:\n",
+    "            if e.code == 424:  # Handle HTTP 424: Failed Dependency\n",
+    "                print(f\"HTTP Error 424: Failed Dependency. Skipping after {attempt + 1}/{max_retries} attempts.\")\n",
+    "                return None\n",
+    "            else:\n",
+    "                print(f\"HTTP Error {e.code}: {e.reason}. Retrying...\")\n",
+    "                sleep_time = backoff_factor * (2 ** attempt)\n",
+    "                time.sleep(sleep_time)\n",
     "    print(f\"Max retries reached for {llm}.\")\n",
     "    return None  # Return None if all retries fail"
    ]
